# Text-to-SQL-Agent

./: .env_example  .gitignore  00_baseline.ipynb  Build_SQL_Dataset.ipynb  README.md  phase0_baseline.ipynb  phase1_agent.ipynb  pyproject.toml
