[project]
name = "sqlagent"
version = "0.1.0"
description = "SQL Agent with LangGraph - Independent submission project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-community",
    "jupyter>=1.0.0",
    "langgraph-cli[inmem]>=0.4.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-tavily>=0.2.13",
    "langchain-qdrant>=1.1.0",
    "python-dotenv>=1.1.1",
    "arxiv>=2.3.1",
    "grandalf>=0.8",
    "nest-asyncio>=1.6.0",
    "pyppeteer>=2.0.0",
    "rich>=14.2.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
# Extra tools for development
dev = [
    "ruff>=0.6.1",
    "mypy>=1.11.1"
]

[tool.ruff]
# What to check
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # docstring first line imperative
    "UP",   # pyupgrade
]

# Rules to ignore
lint.ignore = [
    "T201", # allow print()
    "UP006", # keep using typing.List etc.
    "UP007", # allow Union[X, Y]
    "UP035", # ignore Self type suggestion
    "D417",  # don't require param docs
    "E501",  # ignore line length
    "D101",  # ignore docstring for these labs
    "D103",  # ignore docstring for these labs
    "D202",  # ignore extra space after docstring requirement
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
